[#13669] AOT Cache for the Server
* Add an image profile to server/runtime which creates a UBI micro
  image using a custom JDK RPM